#107235 Update POM argLine and fix RoadSectionsSimulation indentation