@@ -53,6 +53,7 @@
               <!-- Workaround required to run private Gatling code from our own Java code -->
               <argLine>
                 --add-opens=java.base/java.lang=ALL-UNNAMED
+                --add-opens=java.base/java.util=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
